kubernetes/apps/flux-system/webhook/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    ingress.cilium.io/loadbalancer-mode: shared
spec:
  rules:
    - host: webhook.flux.lab.space.nade.me
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: webhook-receiver
                port:
                  number: 80
